Update 2 Comparison Balancing Techniques For Upsampling.ipynb

--- a/Notebooks/2 Comparison Balancing Techniques For Upsampling.ipynb
+++ b/Notebooks/2 Comparison Balancing Techniques For Upsampling.ipynb
@@ -304,7 +304,7 @@
     "        ax.set_ylabel('Actual Values',fontsize=size_text_xy_labels)\n",
     "        ax.set_title(title,fontsize=size_text_title)\n",
     "        ax.figure.subplots_adjust(right=0.8)\n",
-    "        ax.figure.savefig(path_figures+\"/\"+name+\"_CM\"+\".pdf\", bbox_inches = \"tight\", format='pdf')\n",
+    "        ax.figure.savefig(path_img_base+\"/\"+name+\"_CM\"+\".pdf\", bbox_inches = \"tight\", format='pdf')\n",
     "    else:\n",
     "        conf = confusion_matrix(y_test, y_pred) \n",
     "        annot_kws={'fontsize':size_num_inter, 'verticalalignment':'center' }\n",
